# rspark

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: build.yml
src/: lib.rs
