[package]
name = "rspark"
version = "0.2.0"
authors = ["reugn <reugpro@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/reugn/rspark"
documentation = "https://github.com/reugn/rspark"
homepage = "https://crates.io/crates/rspark"
description = "Sparklines for Rust"
keywords = ["cli", "format"]
categories = ["command-line-interface", "value-formatting"]
exclude = ["/.travis.yml", ".gitignore"]
edition = "2018"

[badges]
travis-ci = { repository = "reugn/rspark" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
